# Ariake

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_pipeline.sh  turbo.json
apps/ai-service/: .dockerignore  .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  GEMINI.md  QUICK_REFERENCE.md  README.md  README.zh.md  ROUTES_SUMMARY.md  TESTING.md  client.ts  improvement_evaluation_report.md  main.py  model_config.yaml  package.json  plot_high_diff.py  plot_premium.py  plot_radar.py  plot_ultra_premium.py  pyproject.toml  run_ablation.sh  summary_success.md  types.ts
apps/ai-service/.forge/: FORGE_EDITMSG.md
apps/ai-service/ai_service/: __init__.py  api.py  app.py  cache.py  config.py  db.py  exceptions.py  knowledge_graph.py  llm.py  mechanism_tree.py  middleware.py  models.py  openalex_corpus.py  prompts.py  script_support.py
apps/ai-service/doc/: DRR_Draft.md  DRR_Draft_CN.md  FIGURES_EXPLANATION.md  MIDTERM_PRESENTATION_OUTLINE.md  backend_architecture.md  backend_architecture_CN.md  database_schema.md  database_schema_CN.md  frontend_design.md  frontend_design_CN.md  references.bib
apps/ai-service/plans/: 2026-04-12-academic_benchmark_improvements-v1.md  2026-04-12-academic_benchmark_improvements-v2.md  2026-04-12-corpus_expansion_mid_scale-v1.md  2026-04-12-corpus_expansion_standard-v1.md  2026-04-12-corpus_materialization_expansion-v1.md  (+1 more)
apps/ai-service/tests/: test_app.py  (+5 more)
(+493 files in other folders)
